# gazebo-rfid-plugin

./: .gitignore  CMakeLists.txt  README.md  callservice.sh  calltagservice.sh  create.sh  package.xml  remove.sh  rfidmanager.cpp  rfidmanager.h  rfidscanner.cpp  rfidscanner.h  rfidtag.cpp  rfidtag.h  rmall.sh  run.sh  scan.sh  setup_gz.sh  world.sdf
components/: rfidtagcomponent.h
docs/: scan_model.md  testing.ipynb
docs/worlds/: rssi_test_default.sdf
examples/: scan.sh  world.sdf
hooks/: gazebo_rfid_plugin_pkg.dsv.in  gazebo_rfid_plugin_pkg.sh.in
msg/: RFIDScanResponse.msg  ScanResponse.msg
proto/gz/custom_msgs/: rfid_create_request.proto  rfid_create_response.proto  rfid_scan_response.proto  rfid_tag_list.proto
rfid-scanner/: model.config  model.sdf
rfid-tag/: model.config  model.sdf
src/: rfidscanner.cpp  rfidscanner.h  rfidtag.cpp  rfidtag.h
srv/: RFIDScan.srv
test/integration/: CMakeLists.txt  gazebo_rfid_plugin.cc
test/integration/worlds/: rssi_test_default.sdf
