<?xml version="1.0"?>
<package format="3">
  <name>gazebo_rfid_plugin</name>
  <version>0.0.1</version>
  <description>RFID Gazebo plugin, including models and RFID environment plugins</description>

  <maintainer email="">Henry Bulbeck</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- NOTE Temporarily disabled this dependency. I believe it should be gz-cmake-vendor -->
	  <!--depend>gz-cmake3</depend-->

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- ROS2 msg libraries -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
	  <build_type>ament_cmake</build_type>
  </export>

</package>
